--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -34,8 +34,8 @@ set -g visual-activity off
 set -g default-terminal "screen-256color"
 if 'infocmp -x tmux-256color > /dev/null 2>&1' 'set -g default-terminal "tmux-256color"'
 
-set -as terminal-features ",xterm*:RGB"
-set -ga terminal-overrides ",*256col*:Tc"
+set -as terminal-features ",xterm*:RGB,ghostty*:RGB"
+set -ga terminal-overrides ",*256col*:Tc,ghostty*:Tc"
 
 # Increase scrollback
 set -g history-limit 150000
