--- a/ghostty/config
+++ b/ghostty/config
@@ -1,6 +1,7 @@
 shell-integration = zsh
-font-family = Iosevka Nerd Font
+font-family = IosevkaTerm Nerd Font
 font-size = 16
+font-feature = -calt, -liga, -dlig
 adjust-cell-height = 1
 font-thicken = true
 font-thicken-strength = 1
@@ -14,8 +15,5 @@ shell-integration-features = no-cursor
 macos-titlebar-style = hidden
 macos-titlebar-proxy-icon = hidden
 
-window-width = 115
-window-height = 45
-window-decoration = false
 window-padding-y = 25,1
-window-padding-x = 1,1
+window-padding-x = 10,1
